# bsai

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  env  env_template  pyproject.toml
bsai/src/: dependency.py  utils.py
bsai/src/api/: handler.py  html.py  html_handler.py
bsai/src/db/: schema.py
bsai/src/domain/: clusterer.py  clusterizer.py  core.py  llm.py  parser.py  repository.py  vectorizer.py
bsai/src/types/: dto.py
test/: conf.py
